Improve ayo quest 1.2.6